--- a/sites/all/themes/slac/sass/components/_header.scss
+++ b/sites/all/themes/slac/sass/components/_header.scss
@@ -242,7 +242,7 @@ h1.title {
     border-radius: 0;
     border-image: none;
     color: lighten($grey, 20%);
-    padding: 4px 5em 6px 1em;
+    padding: 4px 5em 6px 4px;
     overflow: hidden;
     height: 27px;
 
